# pp2psdm

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: dependabot-auto-merge.yml  simple-ci.yml
pp2psdm/: grid.py
pp2psdm/conversion/: pandapower.py
pp2psdm/io/: utils.py
pp2psdm/utils/: ext_entity_mapping.py
tests/: test_grid.py
