[tool.poetry]
name = "pp2psdm"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numba = "^0.59.0"
networkx = "^3.2.1"
scipy = "^1.12.0"
numpy = "^1.26.4"
packaging = "^23.2"
tqdm = "^4.66.2"
deepdiff = "^6.7.1"
plotly = "^5.19.0"
matplotlib = "^3.8.3"
pandas = "~2.0.0"
pandapower = "^2.14.11"
simbench = "^1.5.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
pre-commit = "^2.21.0"
PyYAML = "^6.0"

[tool.isort]
profile= "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
