[tool.poetry]
name = "pp2psdm"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>3.11"
pypsdm = {git = "https://github.com/ie3-institute/pypsdm.git"}
pandapower = "^2.14.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
pre-commit = "^2.21.0"
PyYAML = "^6.0"
jupyter = "^1.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
