[tool.poetry]
name = "pp2psdm"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>3.11"
pypsdm = {git = "https://github.com/ie3-institute/pypsdm.git"}
pandapower = "^3.1.2"
psycopg2-binary = ">=2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.2"
pre-commit = "^4.2.0"
PyYAML = "^6.0"
jupyter = "^1.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

